[package]
name = "local_ssl_rust"
version = "0.1.0"
edition = "2021"
description = "HTTP/HTTPS server with redirect and TLS"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
askama = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
webauthn-rs = "0.5"
